@@ -34,6 +34,9 @@ software-center (1.1) UNRELEASED; urgency=low
   [ Julian Andres Klode ]
   * softwarecenter/distro/Debian.py:
     - introduce the Debian version of Ubuntu.py.
+  * softwarecenter/view/{catview.py,appdetailsview.py}:
+    - return the int of self._get_font_description_property("weight")
+      if it has no member named 'real'.
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Oct 2009 15:01:26 +0200
 
